@startuml
!theme crt-green
skinparam nodesep 150
hide empty members
left to right direction
hide circle
hide fields

package "<<agr Course>>"{
    class Course<<entity>><<root>>{}
    class Code <<vo>>
    class Description<<vo>>{}
    class Title<<vo>>{}
    class State<<vo>><<enum>>{}

    Course  --> "1" State
    Course  -down-> "1" Title
    Course  -down-> "1" Description
    Course  -down-> "1" Code

}

package "<<agr Student>>"{

    class Student<<entity>><<root>>{}
    class MechanographicalNumber<<vo>>{}
    class StudentTaxPayerNumber<<vo>>{}
    class StudentDateOfBirth<<vo>>{}

    Student --> "1" MechanographicalNumber
    Student --> "1" SystemUser
    Student --> "1" StudentDateOfBirth
    Student --> "1" StudentTaxPayerNumber
}

package "<<agr CourseEnrollment>>"{
    class CourseEnrollment <<entity>><<root>>{}
    class StudentEnrollmentState <<vo>><<enum>>{}
    class CourseEnrollmentDate <<vo>>{}
    CourseEnrollment --> "1" Course : applied to
    CourseEnrollment --> "1" StudentEnrollmentState
    CourseEnrollment --> "1" CourseEnrollmentDate
    Student "1" <-- CourseEnrollment: applies to
}
@enduml